# fcrn-inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fcrnEngineBuilder.cpp  imageNet.cu  main.cpp
common/: CMakeLists.txt  argsParser.h  preprocessRGB.cu  preprocessRGB.h  processDepth.cu  processDepth.h
fcrn-camera/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  bus_320x240.ppm  bus_640x480.ppm  bus_depth.ppm  main.cpp  tensorrt_code.txt  test_camera.py
fcrn-camera/interleaving/: interleavingPlugin.h  intreleavingPlugin.cpp  plugin.h
fcrn-camera/slice/: plugin.cpp  plugin.h  slicePlugin.cpp  slicePlugin.h
fcrn-camera/upsampling/: plugin.cpp  plugin.h  upsamplingPlugin.cpp  upsamplingPlugin.h
utils/: CMakeLists.txt
utils/camera/: gstCamera.cpp
utils/cuda/: cudaRGB.cu  cudaRGB.h
